crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S101_S101.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S101 Use of `assert` detected
 --> S101.py:1:1
  |
1 | assert True  # S101
  | ^^^^^^

S101 Use of `assert` detected
 --> S101.py:6:5
  |
4 | def fn():
5 |     x = 1
6 |     assert x == 1  # S101
  |     ^^^^^^
7 |     assert x == 2  # S101

S101 Use of `assert` detected
 --> S101.py:7:5
5 |     x = 1
6 |     assert x == 1  # S101
7 |     assert x == 2  # S101
  |     ^^^^^^
