crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S102_S102.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S102 Use of `exec` detected
 --> S102.py:3:5
  |
1 | def fn():
2 |     # Error
3 |     exec('x = 2')
  |     ^^^^
4 |
5 | exec('y = 3')

S102 Use of `exec` detected
 --> S102.py:5:1
3 |     exec('x = 2')
4 |
5 | exec('y = 3')
  | ^^^^

S102 Use of `exec` detected
  --> S102.py:11:5
   |
 9 | def _():
10 |     from builtins import exec
11 |     exec('')  # Error
   |     ^^^^
12 |
13 | def _():
