crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S104_S104.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S104 Possible binding to all interfaces
  --> S104.py:9:1
 8 | # Error
 9 | "0.0.0.0"
   | ^^^^^^^^^
10 | '0.0.0.0'
11 | f"0.0.0.0"

S104 Possible binding to all interfaces
  --> S104.py:10:1
 8 | # Error
 9 | "0.0.0.0"
10 | '0.0.0.0'
   | ^^^^^^^^^
11 | f"0.0.0.0"

S104 Possible binding to all interfaces
  --> S104.py:11:3
 9 | "0.0.0.0"
10 | '0.0.0.0'
11 | f"0.0.0.0"
   |   ^^^^^^^

S104 Possible binding to all interfaces
  --> S104.py:15:6
   |
14 | # Error
15 | func("0.0.0.0")
   |      ^^^^^^^^^

S104 Possible binding to all interfaces
  --> S104.py:19:9
   |
18 | def my_func():
19 |     x = "0.0.0.0"
   |         ^^^^^^^^^
20 |     print(x)

S104 Possible binding to all interfaces
  --> S104.py:24:1
   |
23 | # Implicit string concatenation
24 | "0.0.0.0" f"0.0.0.0{expr}0.0.0.0"
   | ^^^^^^^^^
25 |
26 | # t-strings - all ok

S104 Possible binding to all interfaces
  --> S104.py:24:13
   |
23 | # Implicit string concatenation
24 | "0.0.0.0" f"0.0.0.0{expr}0.0.0.0"
   |             ^^^^^^^
25 |
26 | # t-strings - all ok

S104 Possible binding to all interfaces
  --> S104.py:24:26
   |
23 | # Implicit string concatenation
24 | "0.0.0.0" f"0.0.0.0{expr}0.0.0.0"
   |                          ^^^^^^^
25 |
26 | # t-strings - all ok
