crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S105_S105.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S105 Possible hardcoded password assigned to: "password"
  --> S105.py:13:12
   |
12 | # Errors
13 | password = "s3cr3t"
   |            ^^^^^^^^
14 | _pass = "s3cr3t"
15 | passwd = "s3cr3t"

S105 Possible hardcoded password assigned to: "_pass"
  --> S105.py:14:9
   |
12 | # Errors
13 | password = "s3cr3t"
14 | _pass = "s3cr3t"
   |         ^^^^^^^^
15 | passwd = "s3cr3t"
16 | pwd = "s3cr3t"

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:15:10
   |
13 | password = "s3cr3t"
14 | _pass = "s3cr3t"
15 | passwd = "s3cr3t"
   |          ^^^^^^^^
16 | pwd = "s3cr3t"
17 | secret = "s3cr3t"

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:16:7
   |
14 | _pass = "s3cr3t"
15 | passwd = "s3cr3t"
16 | pwd = "s3cr3t"
   |       ^^^^^^^^
17 | secret = "s3cr3t"
18 | token = "s3cr3t"

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:17:10
   |
15 | passwd = "s3cr3t"
16 | pwd = "s3cr3t"
17 | secret = "s3cr3t"
   |          ^^^^^^^^
18 | token = "s3cr3t"
19 | secrete = "s3cr3t"

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:18:9
   |
16 | pwd = "s3cr3t"
17 | secret = "s3cr3t"
18 | token = "s3cr3t"
   |         ^^^^^^^^
19 | secrete = "s3cr3t"
20 | safe = password = "s3cr3t"

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:19:11
   |
17 | secret = "s3cr3t"
18 | token = "s3cr3t"
19 | secrete = "s3cr3t"
   |           ^^^^^^^^
20 | safe = password = "s3cr3t"
21 | password = safe = "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:20:19
   |
18 | token = "s3cr3t"
19 | secrete = "s3cr3t"
20 | safe = password = "s3cr3t"
   |                   ^^^^^^^^
21 | password = safe = "s3cr3t"
22 | PASSWORD = "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:21:19
   |
19 | secrete = "s3cr3t"
20 | safe = password = "s3cr3t"
21 | password = safe = "s3cr3t"
   |                   ^^^^^^^^
22 | PASSWORD = "s3cr3t"
23 | PassWord = "s3cr3t"

S105 Possible hardcoded password assigned to: "PASSWORD"
  --> S105.py:22:12
   |
20 | safe = password = "s3cr3t"
21 | password = safe = "s3cr3t"
22 | PASSWORD = "s3cr3t"
   |            ^^^^^^^^
23 | PassWord = "s3cr3t"
24 | password: str = "s3cr3t"

S105 Possible hardcoded password assigned to: "PassWord"
  --> S105.py:23:12
   |
21 | password = safe = "s3cr3t"
22 | PASSWORD = "s3cr3t"
23 | PassWord = "s3cr3t"
   |            ^^^^^^^^
24 | password: str = "s3cr3t"
25 | password: Final = "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:24:17
   |
22 | PASSWORD = "s3cr3t"
23 | PassWord = "s3cr3t"
24 | password: str = "s3cr3t"
   |                 ^^^^^^^^
25 | password: Final = "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:25:19
23 | PassWord = "s3cr3t"
24 | password: str = "s3cr3t"
25 | password: Final = "s3cr3t"
   |                   ^^^^^^^^
26 |
27 | d["password"] = "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:27:17
   |
25 | password: Final = "s3cr3t"
26 |
27 | d["password"] = "s3cr3t"
   |                 ^^^^^^^^
28 | d["pass"] = "s3cr3t"
29 | d["passwd"] = "s3cr3t"

S105 Possible hardcoded password assigned to: "pass"
  --> S105.py:28:13
   |
27 | d["password"] = "s3cr3t"
28 | d["pass"] = "s3cr3t"
   |             ^^^^^^^^
29 | d["passwd"] = "s3cr3t"
30 | d["pwd"] = "s3cr3t"

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:29:15
   |
27 | d["password"] = "s3cr3t"
28 | d["pass"] = "s3cr3t"
29 | d["passwd"] = "s3cr3t"
   |               ^^^^^^^^
30 | d["pwd"] = "s3cr3t"
31 | d["secret"] = "s3cr3t"

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:30:12
   |
28 | d["pass"] = "s3cr3t"
29 | d["passwd"] = "s3cr3t"
30 | d["pwd"] = "s3cr3t"
   |            ^^^^^^^^
31 | d["secret"] = "s3cr3t"
32 | d["token"] = "s3cr3t"

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:31:15
   |
29 | d["passwd"] = "s3cr3t"
30 | d["pwd"] = "s3cr3t"
31 | d["secret"] = "s3cr3t"
   |               ^^^^^^^^
32 | d["token"] = "s3cr3t"
33 | d["secrete"] = "s3cr3t"

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:32:14
   |
30 | d["pwd"] = "s3cr3t"
31 | d["secret"] = "s3cr3t"
32 | d["token"] = "s3cr3t"
   |              ^^^^^^^^
33 | d["secrete"] = "s3cr3t"
34 | safe = d["password"] = "s3cr3t"

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:33:16
   |
31 | d["secret"] = "s3cr3t"
32 | d["token"] = "s3cr3t"
33 | d["secrete"] = "s3cr3t"
   |                ^^^^^^^^
34 | safe = d["password"] = "s3cr3t"
35 | d["password"] = safe = "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:34:24
   |
32 | d["token"] = "s3cr3t"
33 | d["secrete"] = "s3cr3t"
34 | safe = d["password"] = "s3cr3t"
   |                        ^^^^^^^^
35 | d["password"] = safe = "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:35:24
   |
33 | d["secrete"] = "s3cr3t"
34 | safe = d["password"] = "s3cr3t"
35 | d["password"] = safe = "s3cr3t"
   |                        ^^^^^^^^

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:39:16
   |
38 | class MyClass:
39 |     password = "s3cr3t"
   |                ^^^^^^^^
40 |     safe = password

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:43:20
   |
43 | MyClass.password = "s3cr3t"
   |                    ^^^^^^^^
44 | MyClass._pass = "s3cr3t"
45 | MyClass.passwd = "s3cr3t"

S105 Possible hardcoded password assigned to: "_pass"
  --> S105.py:44:17
   |
43 | MyClass.password = "s3cr3t"
44 | MyClass._pass = "s3cr3t"
   |                 ^^^^^^^^
45 | MyClass.passwd = "s3cr3t"
46 | MyClass.pwd = "s3cr3t"

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:45:18
   |
43 | MyClass.password = "s3cr3t"
44 | MyClass._pass = "s3cr3t"
45 | MyClass.passwd = "s3cr3t"
   |                  ^^^^^^^^
46 | MyClass.pwd = "s3cr3t"
47 | MyClass.secret = "s3cr3t"

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:46:15
   |
44 | MyClass._pass = "s3cr3t"
45 | MyClass.passwd = "s3cr3t"
46 | MyClass.pwd = "s3cr3t"
   |               ^^^^^^^^
47 | MyClass.secret = "s3cr3t"
48 | MyClass.token = "s3cr3t"

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:47:18
   |
45 | MyClass.passwd = "s3cr3t"
46 | MyClass.pwd = "s3cr3t"
47 | MyClass.secret = "s3cr3t"
   |                  ^^^^^^^^
48 | MyClass.token = "s3cr3t"
49 | MyClass.secrete = "s3cr3t"

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:48:17
   |
46 | MyClass.pwd = "s3cr3t"
47 | MyClass.secret = "s3cr3t"
48 | MyClass.token = "s3cr3t"
   |                 ^^^^^^^^
49 | MyClass.secrete = "s3cr3t"

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:49:19
   |
47 | MyClass.secret = "s3cr3t"
48 | MyClass.token = "s3cr3t"
49 | MyClass.secrete = "s3cr3t"
   |                   ^^^^^^^^
50 |
51 | password == "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:51:13
   |
49 | MyClass.secrete = "s3cr3t"
50 |
51 | password == "s3cr3t"
   |             ^^^^^^^^
52 | _pass == "s3cr3t"
53 | passwd == "s3cr3t"

S105 Possible hardcoded password assigned to: "_pass"
  --> S105.py:52:10
   |
51 | password == "s3cr3t"
52 | _pass == "s3cr3t"
   |          ^^^^^^^^
53 | passwd == "s3cr3t"
54 | pwd == "s3cr3t"

S105 Possible hardcoded password assigned to: "passwd"
  --> S105.py:53:11
   |
51 | password == "s3cr3t"
52 | _pass == "s3cr3t"
53 | passwd == "s3cr3t"
   |           ^^^^^^^^
54 | pwd == "s3cr3t"
55 | secret == "s3cr3t"

S105 Possible hardcoded password assigned to: "pwd"
  --> S105.py:54:8
   |
52 | _pass == "s3cr3t"
53 | passwd == "s3cr3t"
54 | pwd == "s3cr3t"
   |        ^^^^^^^^
55 | secret == "s3cr3t"
56 | token == "s3cr3t"

S105 Possible hardcoded password assigned to: "secret"
  --> S105.py:55:11
   |
53 | passwd == "s3cr3t"
54 | pwd == "s3cr3t"
55 | secret == "s3cr3t"
   |           ^^^^^^^^
56 | token == "s3cr3t"
57 | secrete == "s3cr3t"

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:56:10
   |
54 | pwd == "s3cr3t"
55 | secret == "s3cr3t"
56 | token == "s3cr3t"
   |          ^^^^^^^^
57 | secrete == "s3cr3t"
58 | password == safe == "s3cr3t"

S105 Possible hardcoded password assigned to: "secrete"
  --> S105.py:57:12
   |
55 | secret == "s3cr3t"
56 | token == "s3cr3t"
57 | secrete == "s3cr3t"
   |            ^^^^^^^^
58 | password == safe == "s3cr3t"

S105 Possible hardcoded password assigned to: "password"
  --> S105.py:58:21
   |
56 | token == "s3cr3t"
57 | secrete == "s3cr3t"
58 | password == safe == "s3cr3t"
   |                     ^^^^^^^^
59 |
60 | if token == "1\n2":

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:60:13
   |
58 | password == safe == "s3cr3t"
59 |
60 | if token == "1\n2":
   |             ^^^^^^
61 |     pass

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:63:13
   |
61 |     pass
62 |
63 | if token == "3\t4":
   |             ^^^^^^
64 |     pass

S105 Possible hardcoded password assigned to: "token"
  --> S105.py:66:13
   |
64 |     pass
65 |
66 | if token == "5\r6":
   |             ^^^^^^
67 |     pass
