crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S107_S107.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S107 Possible hardcoded password assigned to function default: "password"
 --> S107.py:5:29
  |
5 | def default(first, password="default"):
  |                             ^^^^^^^^^
6 |     pass

S107 Possible hardcoded password assigned to function default: "password"
  --> S107.py:13:45
   |
13 | def default_posonly(first, /, pos, password="posonly"):
   |                                             ^^^^^^^^^
14 |     pass

S107 Possible hardcoded password assigned to function default: "password"
  --> S107.py:21:39
   |
21 | def default_kwonly(first, *, password="kwonly"):
   |                                       ^^^^^^^^
22 |     pass

S107 Possible hardcoded password assigned to function default: "secret"
  --> S107.py:29:39
   |
29 | def default_all(first, /, pos, secret="posonly", *, password="kwonly"):
   |                                       ^^^^^^^^^
30 |     pass

S107 Possible hardcoded password assigned to function default: "password"
  --> S107.py:29:62
   |
29 | def default_all(first, /, pos, secret="posonly", *, password="kwonly"):
   |                                                              ^^^^^^^^
30 |     pass
