crates/ruff_linter/src/rules/flake8_bandit/snapshots/ruff_linter__rules__flake8_bandit__tests__S112_S112.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
S112 `try`-`except`-`continue` detected, consider logging the exception
 --> S112.py:4:5
  |
2 |       try:
3 |           pass
4 | /     except Exception:
5 | |         continue
  | |________________^
6 |
7 |       try:

S112 `try`-`except`-`continue` detected, consider logging the exception
  --> S112.py:9:5
   |
 7 |       try:
 8 |           pass
 9 | /     except:
10 | |         continue
   | |________________^
11 |
12 |       try:

S112 `try`-`except`-`continue` detected, consider logging the exception
  --> S112.py:14:5
   |
12 |       try:
13 |           pass
14 | /     except (Exception,):
15 | |         continue
   | |________________^
16 |
17 |       try:

S112 `try`-`except`-`continue` detected, consider logging the exception
  --> S112.py:19:5
   |
17 |       try:
18 |           pass
19 | /     except (Exception, ValueError):
20 | |         continue
   | |________________^
21 |
22 |       try:
